fix:line num  align

--- a/web/app/components/workflow/nodes/_base/components/editor/code-editor/style.css
+++ b/web/app/components/workflow/nodes/_base/components/editor/code-editor/style.css
@@ -2,6 +2,15 @@
   padding-left: 10px;
 }
 
+.no-wrapper .margin-view-overlays {
+  padding-left: 0;
+  /* width: 23px !important; */
+}
+
+/* .no-wrapper .margin {
+  width: 23px !important;
+} */
+
 /* hide readonly tooltip */
 .monaco-editor-overlaymessage {
   display: none !important;
